crates/snapi-generators/tests/snapshots/e2e__composition_api_control_request_resource_ts.snap
---
source: crates/snapi-generators/tests/e2e.rs
expression: "extract_text(&tree, \"src/resources/control_request.ts\")"
---
import type { ApiError } from "../models";

export class ControlRequestResource {
  constructor(private baseUrl: string, private headers: Record<string, string> = {}) {}

  async reset(compositionId: string): Promise<{ bearer_token: string } | { audio_duration_ms?: number | null; video_duration_ms?: number | null } | { port?: number | null } | Record<string, unknown>> {
    const url = new URL(`${this.baseUrl}/api/composition/${compositionId}/reset`).toString();
    const response = await fetch(url, {
      method: "POST",
      headers: { ...this.headers },
    });
    if (!response.ok) throw new Error(`HTTP ${response.status}`);
    return response.json() as Promise<{ bearer_token: string } | { audio_duration_ms?: number | null; video_duration_ms?: number | null } | { port?: number | null } | Record<string, unknown>>;
  }

  async start(compositionId: string): Promise<{ bearer_token: string } | { audio_duration_ms?: number | null; video_duration_ms?: number | null } | { port?: number | null } | Record<string, unknown>> {
    const url = new URL(`${this.baseUrl}/api/composition/${compositionId}/start`).toString();
    const response = await fetch(url, {
      method: "POST",
      headers: { ...this.headers },
    });
    if (!response.ok) throw new Error(`HTTP ${response.status}`);
    return response.json() as Promise<{ bearer_token: string } | { audio_duration_ms?: number | null; video_duration_ms?: number | null } | { port?: number | null } | Record<string, unknown>>;
  }

}
